# subsystem-router-classifier

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  subsystems.py
data/: .gitkeep  combined_data.csv  export_to_csv.py  synthetic_data.jsonl  test.jsonl
data/result/: predictions.jsonl
data_creation/: GENERATION_PROMPT.md  README.md  VALIDATION.md  __init__.py
docs/: README.md  VALIDATION_PIPELINE_IMPLEMENTATION.md
evaluation/: f1.py
inference/: hf_model.py
synthetic_validation/: distribution_analysis.py  sampling_and_export.py  synthetic_data_for_validation.csv
train/: classifier_hf.py  classifier_pt.py  data_preparation.py  labels.py  main.py  training_config.yml  training_config_hf.yml  training_config_pt.yml
utils/: __init__.py  config_loader.py  data_loader.py
